privát oldalak levédve

--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -9,25 +9,12 @@
         <img class="last" [src]="'../../../assets/images/termeszet.jpg'">
     </div>
 
-    <div class="flex_div">
+    <div class="flex_div justify">
         {{"home_intro" | translate}}
     </div>
 
-    <div class="flex_div">
-        TODO:<br>
-        privat oldalak levedese<br>
-        tesztelés<br>
-    </div>
-    <div class="flex_div">
-        továbbfejlesztési lehetőségek:<br>
-        - új nyelv: német<br>
-        - szerkesztés: profil, activity, saját hobby<br>
-        - hobby kibövítése: hobby típus: indoor, outdoor; hobby kategória: sport, music, art, dance, travel, other;hobby
-        level: beginner, intermediate, advanced, professional<br>
-        - activity kibővítése: képek feltöltése, helyszín, többi felhasználó társaságának jelölése
-    </div>
-    <div class="flex_div">
-        kész funkciók: <br>
+    <div class="flex_div justify">
+        Elérhető funkciók: <br>
         - login <br>
         - register <br>
         - logout <br>
@@ -43,8 +30,8 @@
         - kategorizált hobbik<br>
         - activity törlése<br>
         - kategória szűrés<br>
-        -saját hobbi törlése<br>
-        -offline mód<br>
+        - saját hobbi törlése<br>
+        - offline mód<br>
     </div>
 
 </div>
