--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@ html, body {
   height: 100%;
   margin: 0;
   font-family: Optima, sans-serif !important;
+  font-size: 18px;
 }
 
 .toolbar, .sidenav-container, .sidenav {
