--- a/src/app/hobbies/components/hobby-list/hobby-list.component.html
+++ b/src/app/hobbies/components/hobby-list/hobby-list.component.html
@@ -16,6 +16,15 @@
       <button class="btn btn-danger" (click)="categoryFilter = undefined; filter();" [matTooltip]="'delete_filter' | translate ">
         <mat-icon>clear</mat-icon>
       </button>
+      <button class="btn btn-primary" *ngIf="sortOrder == true" (click)="sort()" [matTooltip]="'sort' | translate">
+        <mat-icon>arrow_upward</mat-icon>
+      </button>
+      <button class="btn btn-primary" *ngIf="sortOrder == false" (click)="sort()" [matTooltip]="'sort' | translate">
+        <mat-icon>arrow_downward</mat-icon>
+      </button>
+      <button class="btn btn-primary" *ngIf="sortOrder == undefined" (click)="sort()" [matTooltip]="'sort' | translate">
+        <mat-icon>sort</mat-icon>
+      </button>
     </div>
   </div>
   <div class="hobby-tile-container">
