rendezéssel kiegészítve a szövegek

--- a/src/app/hobbies/components/own-hobbies/own-hobbies.component.html
+++ b/src/app/hobbies/components/own-hobbies/own-hobbies.component.html
@@ -20,10 +20,10 @@
           [matTooltip]="'add_new_hobby' | translate ">
           <mat-icon>add</mat-icon>
         </button>
-        <button class="btn btn-primary" *ngIf="sortOrder == true" (click)="sort()" [matTooltip]="'sort' | translate">
+        <button class="btn btn-primary" *ngIf="sortOrder == true" (click)="sort()" [matTooltip]="'sort_asc' | translate">
           <mat-icon>arrow_upward</mat-icon>
         </button>
-        <button class="btn btn-primary" *ngIf="sortOrder == false" (click)="sort()" [matTooltip]="'sort' | translate">
+        <button class="btn btn-primary" *ngIf="sortOrder == false" (click)="sort()" [matTooltip]="'sort_desc' | translate">
           <mat-icon>arrow_downward</mat-icon>
         </button>
         <button class="btn btn-primary" *ngIf="sortOrder == undefined" (click)="sort()" [matTooltip]="'sort' | translate">
