--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -32,6 +32,7 @@
         - kategória szűrés<br>
         - saját hobbi törlése<br>
         - offline mód<br>
+        - hobbik rendezése <br>
     </div>
 
 </div>
