--- a/src/app/hobbies/components/activity-wrap/activity-wrap.component.html
+++ b/src/app/hobbies/components/activity-wrap/activity-wrap.component.html
@@ -25,6 +25,7 @@
             [xAxis]="true"
 			[yAxis]="true"
             [legend]="true"
+            [legendTitle]="'hobbies' | translate"
             [showXAxisLabel]="true"
             [showYAxisLabel]="true"
             [xAxisLabel]="'hobbies' | translate"
@@ -60,6 +61,7 @@
             [xAxis]="true"
 			[yAxis]="true"
             [legend]="true"
+            [legendTitle]="'hobbies' | translate"
             [showXAxisLabel]="true"
             [showYAxisLabel]="true"
             [xAxisLabel]="'hobbies' | translate"
@@ -76,6 +78,7 @@
             [xAxis]="true"
             [yAxis]="true"
             [legend]="true"
+            [legendTitle]="'hobbies' | translate"
             [showXAxisLabel]="true"
             [showYAxisLabel]="true"
             [xAxisLabel]="'months' | translate"
